--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,22 @@
-.App {
-  text-align: center;
+.filter-list {
+  list-style: none;
+  flex-flow: row;
+  display: flex;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.filter-item {
+  font-family: andale mono;
+  background: #ededed;
+  width: 150px;
+  margin-right: 5px;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.filter-title {
+  color: #999;
+  background: white;
+  padding: 5px;
+  border-top: 5px #ededed;
+  margin-bottom: 10px;
 }
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.filter-title strong {
+  color: #000;
 }
